<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@color/screen_background"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/pin_pad_digit_3"
        android:layout_alignLeft="@+id/pin_pad_digit_1"
        android:layout_alignRight="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:textColor="@color/screen_title"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/pin_pad_digit_3"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignRight="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:gravity="center_horizontal"
        android:text="1Sample Internet Payment 2Sample Internet Payment 3Sample Internet Payment 4Sample Internet Payment 5Sample Internet Payment 6Sample Internet Payment"
        android:textColor="@color/screen_subtitle"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/input_indicators_container"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_alignEnd="@id/pin_pad_digit_3"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignRight="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_below="@id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"/>

    <Button
        android:id="@id/pin_pad_digit_1"
        style="@style/pin_pad_button"
        android:layout_alignTop="@+id/pin_pad_digit_2"
        android:layout_toLeftOf="@id/pin_pad_digit_2"
        android:layout_toStartOf="@id/pin_pad_digit_2"
        android:text="@string/pin_pad_digit_1"/>

    <Button
        android:id="@id/pin_pad_digit_2"
        style="@style/pin_pad_button"
        android:layout_below="@id/input_indicators_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/pin_character_top_bottom_margin"
        android:layout_marginLeft="@dimen/pin_character_left_right_margin"
        android:layout_marginRight="@dimen/pin_character_left_right_margin"
        android:layout_marginTop="@dimen/pin_character_top_bottom_margin"
        android:text="@string/pin_pad_digit_2"/>

    <Button
        android:id="@id/pin_pad_digit_3"
        style="@style/pin_pad_button"
        android:layout_alignTop="@id/pin_pad_digit_2"
        android:layout_toEndOf="@id/pin_pad_digit_2"
        android:layout_toRightOf="@id/pin_pad_digit_2"
        android:text="@string/pin_pad_digit_3"/>

    <Button
        android:id="@+id/pin_pad_digit_4"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_alignTop="@+id/pin_pad_digit_5"
        android:text="@string/pin_pad_digit_4"/>

    <Button
        android:id="@id/pin_pad_digit_5"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_2"
        android:layout_alignStart="@id/pin_pad_digit_2"
        android:layout_below="@id/pin_pad_digit_2"
        android:layout_marginBottom="@dimen/pin_character_top_bottom_margin"
        android:layout_marginTop="@dimen/pin_character_top_bottom_margin"
        android:text="@string/pin_pad_digit_5"/>

    <Button
        android:id="@+id/pin_pad_digit_6"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_3"
        android:layout_alignTop="@id/pin_pad_digit_5"
        android:text="@string/pin_pad_digit_6"/>


    <Button
        android:id="@+id/pin_pad_digit_7"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_alignTop="@+id/pin_pad_digit_8"
        android:text="@string/pin_pad_digit_7"/>

    <Button
        android:id="@id/pin_pad_digit_8"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_2"
        android:layout_alignStart="@id/pin_pad_digit_2"
        android:layout_below="@id/pin_pad_digit_5"
        android:layout_marginBottom="@dimen/pin_character_top_bottom_margin"
        android:layout_marginTop="@dimen/pin_character_top_bottom_margin"
        android:text="@string/pin_pad_digit_8"/>

    <Button
        android:id="@+id/pin_pad_digit_9"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_3"
        android:layout_alignTop="@id/pin_pad_digit_8"
        android:text="@string/pin_pad_digit_9"/>

    <Button
        android:id="@+id/pin_pad_digit_0"
        style="@style/pin_pad_button"
        android:layout_alignLeft="@id/pin_pad_digit_2"
        android:layout_alignStart="@id/pin_pad_digit_2"
        android:layout_below="@id/pin_pad_digit_8"
        android:layout_marginTop="10dp"
        android:text="@string/pin_pad_digit_0"/>

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="@dimen/big_btn_size"
        android:layout_height="@dimen/big_btn_size"
        android:layout_alignLeft="@id/pin_pad_digit_3"
        android:layout_alignStart="@id/pin_pad_digit_3"
        android:layout_alignTop="@id/pin_pad_digit_0"
        android:background="@drawable/pin_pad_edit_button"
        android:paddingRight="3dp"
        android:textColor="@color/pin_pad_edit_action_foreground"
        android:src="@drawable/backspace_button_background_icon"/>

    <Button
        android:id="@+id/clear_all"
        android:layout_width="@dimen/big_btn_size"
        android:layout_height="@dimen/big_btn_size"
        android:layout_alignLeft="@id/pin_pad_digit_1"
        android:layout_alignStart="@id/pin_pad_digit_1"
        android:layout_alignTop="@id/pin_pad_digit_0"
        android:background="@drawable/pin_pad_edit_button"
        android:text="@string/clear_all_button_text"
        android:textColor="@color/pin_pad_edit_action_foreground"/>
</RelativeLayout>